--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -32,4 +32,4 @@ jobs:
           port: 22
           script: |
             cd ~/server
-            sudo docker-compose up -d
+            sudo docker compose up -d
