--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -32,4 +32,5 @@ jobs:
           port: 22
           script: |
             cd ~/server
+            sudo docker compose down
             sudo docker compose up -d
