--- a/.github/workflows/installation.yml
+++ b/.github/workflows/installation.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Copy script to Ubuntu server
-        uses: appleboy/scp-action@v2
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
