--- a/.github/workflows/installation.yml
+++ b/.github/workflows/installation.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Copy script to Ubuntu server
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: install_commands.sh
           target: ~/install_commands.sh
 
       - name: Run script on Ubuntu server
-        run: ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} 'bash -s' < ~/install_commands.sh
+        run: ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} 'bash -s' < ~/install_commands.sh
