--- a/.github/workflows/installation.yml
+++ b/.github/workflows/installation.yml
@@ -19,7 +19,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: install_commands.sh
+          source: ./install_commands.sh
           target: ~/install_commands.sh
 
       - name: Run script on Ubuntu server
